--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Raleway&family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">    <title>My Site</title>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit&family=Montserrat:wght@100;400;900&family=Noto+Sans&family=Oswald&display=swap" rel="stylesheet">
+    <title>My Portfolio</title>
   </head>
   <body>
     <div class="top-container">
@@ -24,7 +25,7 @@
       </div>
       <hr>
       <div class="skills">
-        <h2>My Projects</h2>
+        <h2><b>My Projects</b></h2>
         <div class="skill-row">
           <img class="skill-left" src="images/atom.png" alt="react">
           <h3><a href="https://carloslee008.github.io/commute-calculator/">Commute Calculator</a></h3>
@@ -47,8 +48,8 @@
           <img class="skill-left" src="images/database-storage.png" alt="mongodb">
           <h3><a href="https://rococo-druid-fd9fd0.netlify.app/">Keeper</a></h3>
           <p><b>Skills Used: </b>React.js, MongoDB, Mongoose, Express.js, Node.js, HTML, CSS</p>
-          <p><b>Description: </b>A recreation of tinder, but for dogs. Worked with a variety of bootstrap components
-            and CSS styles to create a startup website.</p>
+          <p><b>Description: </b>An app where you can save and delete notes. Used React practices such as hooks and
+            refs to save and pass data onto a backend (MongoDB atlas).</p>
           <p><a href=https://github.com/carloslee008/keeper-mern>GitHub repo</a></p>
           
         </div>
